clusters/production/core/flux-system/network-policies/allow-http-traffic.yaml
---
# allow http-01 challenges for flux-operator ui
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http-traffic
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: flux-operator
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 9080
          protocol: TCP
  policyTypes:
    - Ingress
